Custom--app/main/default/objects/Disposition__c/Disposition__c.object-meta.xml
<CustomObject>
    <label>Disposition</label>
    <nameField>
        <displayFormat>DISPO-{000000}</displayFormat>
        <label>Disposition No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disposition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>