Custom--app/main/default/objects/Disposition__c/fields/Accepted_Contract_Contingencies__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Contract_Contingencies__c</fullName>
    <label>Accepted Contract Contingencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>