Custom--app/main/default/objects/Disposition__c/fields/Accepted_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Contract_Price__c</fullName>
    <label>Accepted Contract Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>