Custom--app/main/default/objects/Disposition__c/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <formula>Portfolio__r.Acquisition_Date__c</formula>
    <label>Acquisition Date</label>
    <type>Date</type>
</CustomField>