Custom--app/main/default/objects/Disposition__c/fields/Actual_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Closing_Date__c</fullName>
    <label>Actual Closing Date</label>
    <type>Date</type>
</CustomField>