Custom--app/main/default/objects/Disposition__c/fields/Actual_Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Actual_Profit_Loss__c</fullName>
    <formula>Net_Proceeds_to_Seller_Final_HUD_Formula__c - Accounting_Basis_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Profit/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>