Custom--app/main/default/objects/Disposition__c/fields/Aging_of_Days_Since_Acq__c.field-meta.xml
<CustomField>
    <fullName>Aging_of_Days_Since_Acq__c</fullName>
    <formula>IF( ISBLANK( Settlement_Date__c ) ,  TODAY()  -  Portfolio__r.Acquisition_Date__c ,  Settlement_Date__c  -  Portfolio__r.Acquisition_Date__c )</formula>
    <label>Aging # of Days Since Acq.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>