Custom--app/main/default/objects/Disposition__c/fields/Aging_of_Days_since_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Aging_of_Days_since_Record_Created__c</fullName>
    <formula>IF( (Settlement_Date__c > TODAY()), NOW()-CreatedDate, Settlement_Date__c - DATEVALUE(CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging # of Days since Record Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>