Custom--app/main/default/objects/Disposition__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending IH Regional Approval</fullName>
            </value>
            <value>
                <fullName>Pending IH MIC Approval</fullName>
            </value>
            <value>
                <fullName>Pending TRS Transfer</fullName>
            </value>
            <value>
                <fullName>Approved For Sale</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>