Custom--app/main/default/objects/Disposition__c/fields/Auction_Bidding_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Auction_Bidding_Deadline_Date__c</fullName>
    <label>Auction Bidding Deadline Date</label>
    <type>Date</type>
</CustomField>