Custom--app/main/default/objects/Disposition__c/fields/Auction_Company__c.field-meta.xml
<CustomField>
    <fullName>Auction_Company__c</fullName>
    <label>Auction Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>