Custom--app/main/default/objects/Disposition__c/fields/Auction_Company_Fee_Buyer_Premium__c.field-meta.xml
<CustomField>
    <fullName>Auction_Company_Fee_Buyer_Premium__c</fullName>
    <label>Auction Company Fee/Buyer Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>