Custom--app/main/default/objects/Disposition__c/fields/Auction_Date__c.field-meta.xml
<CustomField>
    <fullName>Auction_Date__c</fullName>
    <label>Auction Date</label>
    <type>Date</type>
</CustomField>