Custom--app/main/default/objects/Disposition__c/fields/Auction_Reserved_Price__c.field-meta.xml
<CustomField>
    <fullName>Auction_Reserved_Price__c</fullName>
    <label>Auction Reserved Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>