Custom--app/main/default/objects/Disposition__c/fields/Auction_Service_Fees_Final_HUD__c.field-meta.xml
<CustomField>
    <fullName>Auction_Service_Fees_Final_HUD__c</fullName>
    <label>Auction Service Fees (Final HUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>