Custom--app/main/default/objects/Disposition__c/fields/BPO_As_Is__c.field-meta.xml
<CustomField>
    <fullName>BPO_As_Is__c</fullName>
    <label>BPO (As-Is)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>