Custom--app/main/default/objects/Disposition__c/fields/Brief_Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Brief_Synopsis__c</fullName>
    <inlineHelpText>For example: "Property was marketed for 20 days, realtor did well, closed on 1/12/14, inspection had certain issues which we fixed, closed with a $3500 credit".</inlineHelpText>
    <label>Brief Synopsis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>