Custom--app/main/default/objects/Disposition__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <label>Broker</label>
    <length>80</length>
    <type>Text</type>
</CustomField>