Custom--app/main/default/objects/Disposition__c/fields/Bulk_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Disposition__c</fullName>
    <label>Bulk Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>