Custom--app/main/default/objects/Disposition__c/fields/Bulk_Disposition_Group__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Disposition_Group__c</fullName>
    <description>Required only if Bulk Disposition is YES</description>
    <label>Bulk Disposition Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>