Custom--app/main/default/objects/Disposition__c/fields/Buyer_Credits_Pre_pays_Final_HUD__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Credits_Pre_pays_Final_HUD__c</fullName>
    <label>Seller Credits/Pre-pays (Final HUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>