Custom--app/main/default/objects/Disposition__c/fields/Buyer_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_Name__c</fullName>
    <label>Buyer's Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>