Custom--app/main/default/objects/Disposition__c/fields/Closing_Cost_Assist__c.field-meta.xml
<CustomField>
    <fullName>Closing_Cost_Assist__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Closing Cost Assist</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>