Custom--app/main/default/objects/Disposition__c/fields/Closing_Cost_Assist_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Cost_Assist_Comments__c</fullName>
    <label>Closing Cost Assist Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>