Custom--app/main/default/objects/Disposition__c/fields/Concession_Amount__c.field-meta.xml
<CustomField>
    <fullName>Concession_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>How much are the concessions?</inlineHelpText>
    <label>Concession Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>