Custom--app/main/default/objects/Disposition__c/fields/Concession_Comments__c.field-meta.xml
<CustomField>
    <fullName>Concession_Comments__c</fullName>
    <label>Concession Comments</label>
    <type>TextArea</type>
</CustomField>