Custom--app/main/default/objects/Disposition__c/fields/Cost_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sale__c</fullName>
    <label>Cost of Sale</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>