Custom--app/main/default/objects/Disposition__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <formula>Portfolio__r.Property_County__c</formula>
    <label>zzzz_County</label>
    <type>Text</type>
</CustomField>