Custom--app/main/default/objects/Disposition__c/fields/County_Text__c.field-meta.xml
<CustomField>
    <fullName>County_Text__c</fullName>
    <description>D-00015414</description>
    <label>County</label>
    <length>20</length>
    <type>Text</type>
</CustomField>