Custom--app/main/default/objects/Disposition__c/fields/Current_Lease_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Expiration_Date__c</fullName>
    <formula>Renewals__r.Lease_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lease Expiration Date</label>
    <type>Date</type>
</CustomField>