Custom--app/main/default/objects/Disposition__c/fields/Current_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Market_Value__c</fullName>
    <formula>Top_Offer_Price__c  -  Concession_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current (Market Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>