Custom--app/main/default/objects/Disposition__c/fields/Current_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Offer_Price__c</fullName>
    <label>Current Offer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>