Custom--app/main/default/objects/Disposition__c/fields/Current_Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Renewal_Status__c</fullName>
    <formula>TEXT(Renewals__r.Renewal_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Renewal Status</label>
    <type>Text</type>
</CustomField>