Custom--app/main/default/objects/Disposition__c/fields/Date_of_BX_Approval_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Date_of_BX_Approval_of_Sale__c</fullName>
    <label>Date of IH MIC Approval of Sale</label>
    <type>Date</type>
</CustomField>