Custom--app/main/default/objects/Disposition__c/fields/Date_Submitted_for_IH_Dispo_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_for_IH_Dispo_Approval__c</fullName>
    <label>Date Submitted for IH Dispo Approval</label>
    <type>Date</type>
</CustomField>