Custom--app/main/default/objects/Disposition__c/fields/Dipsositions_Approval_Group__c.field-meta.xml
<CustomField>
    <fullName>Dipsositions_Approval_Group__c</fullName>
    <label>Dispositions Approval Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phase I</fullName>
            </value>
            <value>
                <fullName>Phase II</fullName>
            </value>
            <value>
                <fullName>Phase III (BLT)</fullName>
            </value>
            <value>
                <fullName>Phase IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>