Custom--app/main/default/objects/Disposition__c/fields/Dispo_Lease_Renewal_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Dispo_Lease_Renewal_Strategy__c</fullName>
    <label>Dispo Lease Renewal Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Okay to Renew</fullName>
            </value>
            <value>
                <fullName>Non-Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>