Custom--app/main/default/objects/Disposition__c/fields/Disposition_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Disposition</relationshipName>
    <type>Lookup</type>
</CustomField>