Custom--app/main/default/objects/Disposition__c/fields/Disposition_Manager__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Disposition1</relationshipName>
    <type>Lookup</type>
</CustomField>