Custom--app/main/default/objects/Disposition__c/fields/Disposition_Notes_Issues__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Notes_Issues__c</fullName>
    <label>Disposition Notes / Issues</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>