Custom--app/main/default/objects/Disposition__c/fields/Disposition_Property_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Property_Code_Text__c</fullName>
    <description>Copies  Property Code to text for access via SF Global  search :- D-00015414</description>
    <label>Disposition Property Code Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>