Custom--app/main/default/objects/Disposition__c/fields/Disposition_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Strategy__c</fullName>
    <label>Disposition Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Realtor</fullName>
            </value>
            <value>
                <fullName>Auction/Realtor</fullName>
            </value>
            <value>
                <fullName>Tenant Offer</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RFL</fullName>
            </value>
            <value>
                <fullName>DTM - Network</fullName>
            </value>
            <value>
                <fullName>Broker/MLS</fullName>
            </value>
            <value>
                <fullName>DTM - Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>