Custom--app/main/default/objects/Disposition__c/fields/Disposition_Yardi_Code_Historical_to_Tex__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Yardi_Code_Historical_to_Tex__c</fullName>
    <description>Text  field for related Property : yardi Code Historical for Global SF Search</description>
    <label>Disposition Yardi Code Historical to Tex</label>
    <length>50</length>
    <type>Text</type>
</CustomField>