Custom--app/main/default/objects/Disposition__c/fields/Disposition_Yardi_Code_To_Text__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Yardi_Code_To_Text__c</fullName>
    <description>Copies Yardi Property Code to text for access via  SF Global search :D-00015414</description>
    <label>Yardi Property Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>