Custom--app/main/default/objects/Disposition__c/fields/Earnest_Money__c.field-meta.xml
<CustomField>
    <fullName>Earnest_Money__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Earnest Money</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>