Custom--app/main/default/objects/Disposition__c/fields/Escrow_Company__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Company__c</fullName>
    <label>Escrow Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>