Custom--app/main/default/objects/Disposition__c/fields/Est_Current_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Est_Current_Market_Value__c</fullName>
    <label>Est. Current (Market Value)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>