Custom--app/main/default/objects/Disposition__c/fields/Final_Walk_Thru_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Walk_Thru_Date__c</fullName>
    <label>Final Walk Thru Date</label>
    <type>Date</type>
</CustomField>