Custom--app/main/default/objects/Disposition__c/fields/Finance_Contingency_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contingency_Exp_Date__c</fullName>
    <label>Finance Contingency Exp. Date</label>
    <type>Date</type>
</CustomField>