Custom--app/main/default/objects/Disposition__c/fields/Fund_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fund_Formula__c</fullName>
    <description>It will save fund from property</description>
    <formula>IF(ISBLANK(TEXT(Fund__c) ) , Portfolio__r.Fund__c, TEXT(Fund__c))</formula>
    <label>Fund</label>
    <type>Text</type>
</CustomField>