Custom--app/main/default/objects/Disposition__c/fields/Highest_and_Best_Final_Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Highest_and_Best_Final_Offer_Date__c</fullName>
    <inlineHelpText>This field is used when multiple offers are submitted and buyers are given a deadline to submit their highest and best final offer.</inlineHelpText>
    <label>Highest and Best Final Offer Date</label>
    <type>Date</type>
</CustomField>