Custom--app/main/default/objects/Disposition__c/fields/HOA_Past_Due_Prorates_Final_HUD__c.field-meta.xml
<CustomField>
    <fullName>HOA_Past_Due_Prorates_Final_HUD__c</fullName>
    <label>HOA Past Due/Prorates (Final HUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>