Custom--app/main/default/objects/Disposition__c/fields/IH_Analyst_Walk_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>IH_Analyst_Walk_Complete_Date__c</fullName>
    <label>IH Analyst Walk Complete Date</label>
    <type>Date</type>
</CustomField>