Custom--app/main/default/objects/Disposition__c/fields/IH_Approval_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>IH_Approval_of_Sale__c</fullName>
    <label>IH Regional Approval of Sale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>