Custom--app/main/default/objects/Disposition__c/fields/IH_BPO_ARV__c.field-meta.xml
<CustomField>
    <fullName>IH_BPO_ARV__c</fullName>
    <label>IH BPO (ARV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>