Custom--app/main/default/objects/Disposition__c/fields/IH_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>IH_Reporting_Date__c</fullName>
    <inlineHelpText>This is the date on which the property was reported to Management as "Closed and Funded".</inlineHelpText>
    <label>IH Reporting Date</label>
    <type>Date</type>
</CustomField>