Custom--app/main/default/objects/Disposition__c/fields/Inspection_Exp_Contingency_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Exp_Contingency_Date__c</fullName>
    <label>Inspection Exp. Contingency Date</label>
    <type>Date</type>
</CustomField>