Custom--app/main/default/objects/Disposition__c/fields/Lien_Payoffs_Misc_Other_Fees_Final_HUD__c.field-meta.xml
<CustomField>
    <fullName>Lien_Payoffs_Misc_Other_Fees_Final_HUD__c</fullName>
    <label>Lien Payoffs/Misc Other Fees (Final HUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>