Custom--app/main/default/objects/Disposition__c/fields/List_Price_Reduction_2__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Reduction_2__c</fullName>
    <label>List Price Reduction 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>