Custom--app/main/default/objects/Disposition__c/fields/List_Price_Reduction_2_Date__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Reduction_2_Date__c</fullName>
    <label>List Price Reduction 2 Date</label>
    <type>Date</type>
</CustomField>