Custom--app/main/default/objects/Disposition__c/fields/Listing_Agent_Commission_Final_HUD__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Commission_Final_HUD__c</fullName>
    <label>Listing Agent Commission (Final HUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>