Custom--app/main/default/objects/Disposition__c/fields/Listing_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Expiration_Date__c</fullName>
    <label>Listing Expiration Date</label>
    <type>Date</type>
</CustomField>