Custom--app/main/default/objects/Disposition__c/fields/LockBox_Code_Information__c.field-meta.xml
<CustomField>
    <fullName>LockBox_Code_Information__c</fullName>
    <label>LockBox Code/Information</label>
    <length>80</length>
    <type>Text</type>
</CustomField>