Custom--app/main/default/objects/Disposition__c/fields/Make_Ready_Comments__c.field-meta.xml
<CustomField>
    <fullName>Make_Ready_Comments__c</fullName>
    <label>Make Ready Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>