Custom--app/main/default/objects/Disposition__c/fields/Make_Ready_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Make_Ready_Strategy__c</fullName>
    <label>Make Ready Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flip Level Rehab</fullName>
            </value>
            <value>
                <fullName>Meet FHA lending requirements</fullName>
            </value>
            <value>
                <fullName>As-Is</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>