Custom--app/main/default/objects/Disposition__c/fields/MLS__c.field-meta.xml
<CustomField>
    <fullName>MLS__c</fullName>
    <label>MLS #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>