Custom--app/main/default/objects/Disposition__c/fields/Most_Recent_Rehab_Type__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Rehab_Type__c</fullName>
    <formula>Rehab__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Rehab: Type</label>
    <type>Text</type>
</CustomField>