Custom--app/main/default/objects/Disposition__c/fields/Net_Proceeds_BPO__c.field-meta.xml
<CustomField>
    <fullName>Net_Proceeds_BPO__c</fullName>
    <formula>BPO_As_Is__c  -  Cost_of_Sale__c -  Make_Ready__c</formula>
    <label>Net Proceeds (BPO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>