Custom--app/main/default/objects/Disposition__c/fields/Net_Proceeds_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Proceeds_Market_Value__c</fullName>
    <formula>Current_Market_Value__c  -  Closing_Cost_Assist__c -  Cost_of_Sale__c</formula>
    <label>Net Proceeds (Market Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>