Custom--app/main/default/objects/Disposition__c/fields/Net_Proceeds_to_Seller_Final_HUD__c.field-meta.xml
<CustomField>
    <fullName>Net_Proceeds_to_Seller_Final_HUD__c</fullName>
    <label>Net Proceeds to Seller (Final HUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>