Custom--app/main/default/objects/Disposition__c/fields/Net_Proceeds_to_Seller_Final_HUD_Formula__c.field-meta.xml
<CustomField>
    <fullName>Net_Proceeds_to_Seller_Final_HUD_Formula__c</fullName>
    <formula>Accepted_Contract_Price__c -  Concession_Amount__c  -  Total_Actual_Closing_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Proceeds to Seller (Final HUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>