Custom--app/main/default/objects/Disposition__c/fields/No_of_Showings__c.field-meta.xml
<CustomField>
    <fullName>No_of_Showings__c</fullName>
    <label>No. of Showings</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>