Custom--app/main/default/objects/Disposition__c/fields/Number_of_Offers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Offers__c</fullName>
    <label>Number of Offers</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>