Custom--app/main/default/objects/Disposition__c/fields/Offer_Acceptance_status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Acceptance_status__c</fullName>
    <label>Offer Acceptance status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>