Custom--app/main/default/objects/Disposition__c/fields/Offer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Offer_Notes__c</fullName>
    <label>Offer Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>