Custom--app/main/default/objects/Disposition__c/fields/Office_Sign_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Office_Sign_Off_Date__c</fullName>
    <label>Office Sign Off Date</label>
    <type>Date</type>
</CustomField>