Custom--app/main/default/objects/Disposition__c/fields/Owner_Entity__c.field-meta.xml
<CustomField>
    <fullName>Owner_Entity__c</fullName>
    <formula>Portfolio__r.Owner_Entity__c</formula>
    <label>Owner Entity</label>
    <type>Text</type>
</CustomField>