Custom--app/main/default/objects/Disposition__c/fields/Pre_Disposition_History__c.field-meta.xml
<CustomField>
    <fullName>Pre_Disposition_History__c</fullName>
    <label>Pre-Disposition History</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>